fix explore dataset button

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-page",
-  "homepage": "https://potatwei.github.io/project-page/",
+  "homepage": "https://potatwei.github.io/project-page",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
